Game input processing update
Add message procedure for game
Add code for debugging
Fix type of argument passed to Render()

--- a/BudaeJjigae.vcxproj.filters
+++ b/BudaeJjigae.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Ingredients\GameMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Ingredients\Debug.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ingredients\Timer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Ingredients\GameMain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Ingredients\Debug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
