--- a/BudaeJjigae.vcxproj
+++ b/BudaeJjigae.vcxproj
@@ -139,11 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Ingredients\Debug.cpp" />
     <ClCompile Include="Ingredients\GameMain.cpp" />
     <ClCompile Include="Ingredients\main.cpp" />
     <ClCompile Include="Ingredients\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Ingredients\Debug.h" />
     <ClInclude Include="Ingredients\GameMain.h" />
     <ClInclude Include="Ingredients\Timer.h" />
   </ItemGroup>
