Create GameObject class

--- a/BudaeJjigae.vcxproj
+++ b/BudaeJjigae.vcxproj
@@ -141,12 +141,14 @@
   <ItemGroup>
     <ClCompile Include="Ingredients\Debug.cpp" />
     <ClCompile Include="Ingredients\GameMain.cpp" />
+    <ClCompile Include="Ingredients\GameObject.cpp" />
     <ClCompile Include="Ingredients\main.cpp" />
     <ClCompile Include="Ingredients\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ingredients\Debug.h" />
     <ClInclude Include="Ingredients\GameMain.h" />
+    <ClInclude Include="Ingredients\GameObject.h" />
     <ClInclude Include="Ingredients\Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
