--- a/BudaeJjigae.vcxproj.filters
+++ b/BudaeJjigae.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Ingredients\Debug.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Ingredients\GameObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ingredients\Timer.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Ingredients\Debug.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Ingredients\GameObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
