--- a/BudaeJjigae.vcxproj
+++ b/BudaeJjigae.vcxproj
@@ -143,7 +143,9 @@
     <ClCompile Include="Ingredients\Debug.cpp" />
     <ClCompile Include="Ingredients\Game.cpp" />
     <ClCompile Include="Ingredients\GameObject.cpp" />
-    <ClCompile Include="Ingredients\GamePlayer.cpp" />
+    <ClCompile Include="Ingredients\GameObject2D.cpp" />
+    <ClCompile Include="Ingredients\GamePlayer2D.cpp" />
+    <ClCompile Include="Ingredients\Game2D.cpp" />
     <ClCompile Include="Ingredients\main.cpp" />
     <ClCompile Include="Ingredients\Timer.cpp" />
   </ItemGroup>
@@ -152,7 +154,9 @@
     <ClInclude Include="Ingredients\Debug.h" />
     <ClInclude Include="Ingredients\Game.h" />
     <ClInclude Include="Ingredients\GameObject.h" />
-    <ClInclude Include="Ingredients\GamePlayer.h" />
+    <ClInclude Include="Ingredients\GameObject2D.h" />
+    <ClInclude Include="Ingredients\GamePlayer2D.h" />
+    <ClInclude Include="Ingredients\Game2D.h" />
     <ClInclude Include="Ingredients\Timer.h" />
     <ClInclude Include="Ingredients\Util.h" />
   </ItemGroup>
