Add skill cooldown and change the structure of the game flow
change input processing structure and fixed concurrency issues
add an update function to do the game business logic
to render game objects, simulates all states, not just positions
add skill cooldown
add functions to get the current time to the Timer class
add missing files

--- a/BudaeJjigae.vcxproj
+++ b/BudaeJjigae.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="Ingredients\Projectile2D.h" />
     <ClInclude Include="Ingredients\Timer.h" />
     <ClInclude Include="Ingredients\Util.h" />
+    <ClInclude Include="Ingredients\WindowMessage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
