--- a/BudaeJjigae.vcxproj.filters
+++ b/BudaeJjigae.vcxproj.filters
@@ -85,5 +85,6 @@
     <ClInclude Include="Ingredients\Timer.h">
       <Filter>Utility</Filter>
     </ClInclude>
+    <ClInclude Include="Ingredients\WindowMessage.h" />
   </ItemGroup>
 </Project>
